--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -316,11 +316,11 @@
 						</li>
 						<li class="mb-3 d-flex align-items-start">
 							<i class="fas fa-phone-alt text-primary mt-1 me-3" style="font-size: 1.1rem;"></i>
-							<span style="font-size: 1.05rem;"><a href="tel:+250792397681" class="text-light text-decoration-none hover-text-primary">+250 792 397 681</a></span>
+							<span style="font-size: 1.05rem;"><a href="tel:+250792397681" class="text-light text-decoration-none hover-text-primary">+250 788497482</a></span>
 						</li>
 						<li class="mb-3 d-flex align-items-start">
 							<i class="fas fa-envelope text-primary mt-1 me-3" style="font-size: 1.1rem;"></i>
-							<span style="font-size: 1.05rem;"><a href="mailto:muhirehillary720@gmail.com" class="text-light text-decoration-none hover-text-primary">muhirehillary720@gmail.com</a></span>
+							<span style="font-size: 1.05rem;"><a href="muhiziaimepatrick@gmail.com" class="text-light text-decoration-none hover-text-primary">muhiziaimepatrick@gmail.com</a></span>
 						</li>
 						<li class="d-flex align-items-start">
 							<i class="fas fa-clock text-primary mt-1 me-3" style="font-size: 1.1rem;"></i>
